[package]
edition = "2021"
name = "track"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "3", features = ["derive"]}
dirs = "4"
rusqlite = "0.27"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
