[package]
edition = "2021"
name = "track"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = {version = "3.2.17", features = ["derive"]}
dirs = "4.0.0"
flate2 = "1.0.24"
path-absolutize = "3.0.13"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tar = "0.4.38"
walkdir = "2.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
